--- a/style.css
+++ b/style.css
@@ -1,30 +1,74 @@
-/*
-*画面のスタイルシート
-*/
-
-body{
-    font-family: "Noto Sans JP","Sans-serif";
+body {
+    font-family: "Noto Sans JP", "Sans-serif";
     margin: 0;
-    min-width:1076px;
+    min-width: 1076px;
 }
 
-/*
-*[header]のスタイルシート
-*/
+.color-green {
+    color: #00ABAE;
+}
 
-.block-header{
+.sub-title {
+    font-size: 32px;
+}
+
+.block-header {
     margin: 10px 0;
     padding: 0 20px 10px;
-    box-shadow: 0 10px 10px -5px rgba(204,204,204,0.3);
+    box-shadow: 0 10px 10px -5px rgba(204, 204, 204, 0.3);
 }
 
-.block-header a{
+.block-header a {
     font-size: 40px;
     color: #000;
-    text-decoration: none;/*線*/
-    letter-spacing: 1px;/*文字の間隔*/
+    text-decoration: none;
+    letter-spacing: 1px;
 }
 
-.color-green{
-    color: #00ABAE;
+
+.block-main {
+    text-align: center;
+    margin: 100px 0;
+}
+
+.item-list {
+    width: 100%;
+    max-width: 348px;
+    margin: 0 auto;
+}
+
+.item-list b {
+    display: block;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 20px 0 30px;
+}
+
+.item-list p {
+    font-size: 15px;
+    line-height: normal;
+    text-align: left;
+}
+
+.icon-list {
+    list-style: none;
+    width: 100%;
+    max-width: 247px;
+    margin: 30px auto;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-list li {
+    margin-right: 22px;
+}
+
+.icon-list li:last-child {
+    margin-right: 0px;
+}
+
+.icon-list img{
+    width:50px;
 }
